// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelectField /> renders with error hint 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-13 MuiInput-error-18 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203",
            }
          }
        />
      </div>
      <input
        aria-invalid={true}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value=""
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-56 MuiFormHelperText-error-57"
  >
    Lorem error
  </p>
</div>
`;

exports[`<MultiSelectField /> renders with hint 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-13 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203",
            }
          }
        />
      </div>
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value=""
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-56"
  >
    Lorem ipsum
  </p>
</div>
`;

exports[`<MultiSelectField /> renders with label 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-50 MuiInputLabel-root-44 MuiInputLabel-formControl-45 MuiInputLabel-animated-48"
    data-shrink={false}
  >
    Lorem ipsum
  </label>
  <div
    className="MuiInput-root-13 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203",
            }
          }
        />
      </div>
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value=""
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<MultiSelectField /> renders with label and hint 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-50 MuiInputLabel-root-44 MuiInputLabel-formControl-45 MuiInputLabel-animated-48"
    data-shrink={false}
  >
    Lorem
  </label>
  <div
    className="MuiInput-root-13 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203",
            }
          }
        />
      </div>
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value=""
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-56"
  >
    Ipsum
  </p>
</div>
`;

exports[`<MultiSelectField /> renders with no value 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-13 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203",
            }
          }
        />
      </div>
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value=""
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<MultiSelectField /> renders with value 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-13 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Component-chipContainer-2"
        >
          <div
            className="MuiChip-root-37 Component-chip-1"
            onClick={undefined}
            onKeyDown={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="MuiChip-label-42"
            >
              Apparel
            </span>
          </div>
        </div>
      </div>
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value="1"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<MultiSelectField /> renders with value, label and hint 1`] = `
<div
  className="MuiFormControl-root-4 Component-formControl-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-50 MuiInputLabel-root-44 MuiInputLabel-formControl-45 MuiInputLabel-animated-48 MuiInputLabel-shrink-47"
    data-shrink={true}
  >
    Lorem
  </label>
  <div
    className="MuiInput-root-13 MuiInput-fullWidth-20 MuiInput-formControl-14 MuiInput-underline-17"
  >
    <div
      className="MuiSelect-root-8"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-9 MuiSelect-selectMenu-10 MuiInput-input-21"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Component-chipContainer-2"
        >
          <div
            className="MuiChip-root-37 Component-chip-1"
            onClick={undefined}
            onKeyDown={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="MuiChip-label-42"
            >
              Apparel
            </span>
          </div>
        </div>
      </div>
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        defaultValue={undefined}
        id={undefined}
        name={undefined}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="hidden"
        value="1"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-27 MuiSelect-icon-12"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-56"
  >
    Ipsum
  </p>
</div>
`;
